--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Hi, I'm Rex.</h1>
-                    <p class="lead">Coding by day, volleyball by night.b</p>
+                    <p class="lead">Coding by day, and volleyball by night.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button type="button" class="btn btn-warning btn-lg px-4 me-md-2">Hire Me</button>
                     </div>
