--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Hi, I'm Rex.</h1>
-                    <p class="lead">Coding by day, and volleyball by night.</p>
+                    <p class="lead">Coding by day, and volleyball by night. </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button type="button" class="btn btn-warning btn-lg px-4 me-md-2">Hire Me</button>
                     </div>
@@ -69,7 +69,7 @@
     </main>
     <section class="container text-dark p-5" id="contact">
         <h1 class="text-center mb-3">Contact Me</h1>
-        <form action="#">
+        <form method="POST" data-netlify="true" name="PortfolioContact">
             <div class="row mb-1">
                 <div class="col">
                     <label class="form-label">First Name</label>
